--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-toastify": "^9.0.8",
     "shorthash2": "^1.0.3",
     "swiper": "^10.0.4",
+    "swr": "^2.2.0",
     "tinycolor2": "^1.4.2",
+    "viem": "^1.4.2",
     "wagmi": "^0.4.9"
   },
   "devDependencies": {
